fix: WTE field naming variations
The WTE field naming differs based on how it was received.
If received via DMS it has the database naming of
`placementWholeTimeEquivalent`. However, if it is sent as a result of a
re-sync request it is named `wholeTimeEquivalent`.

Update the TraineeDetailsMapper to handle both names for this field.

TIS21-5140