@@ -22,13 +22,16 @@
 package uk.nhs.hee.tis.trainee.sync.mapper;
 
 import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.springframework.test.util.AssertionErrors.assertTrue;
 
 import java.lang.reflect.Field;
-import java.util.Collections;
+import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.util.ReflectionUtils;
 import uk.nhs.hee.tis.trainee.sync.dto.TraineeDetailsDto;
 import uk.nhs.hee.tis.trainee.sync.mapper.util.TraineeDetailsUtil;
@@ -50,7 +53,7 @@ class TraineeDetailsMapperTest {
   @Test
   void shouldMapCurriculaToEmptySetWhenBadJson() {
     Record recrd = new Record();
-    recrd.setData(Collections.singletonMap("curricula", "bad JSON"));
+    recrd.setData(Map.of("curricula", "bad JSON"));
 
     TraineeDetailsDto traineeDetails = mapper.toProgrammeMembershipDto(recrd);
 
@@ -60,7 +63,7 @@ class TraineeDetailsMapperTest {
   @Test
   void shouldMapCurriculaToEmptySetWhenMissing() {
     Record recrd = new Record();
-    recrd.setData(Collections.singletonMap("curricula", null));
+    recrd.setData(Map.of());
 
     TraineeDetailsDto traineeDetails = mapper.toProgrammeMembershipDto(recrd);
 
@@ -70,7 +73,7 @@ class TraineeDetailsMapperTest {
   @Test
   void shouldMapConditionsOfJoiningToEmptyMapWhenBadJson() {
     Record recrd = new Record();
-    recrd.setData(Collections.singletonMap("conditionsOfJoining", "bad JSON"));
+    recrd.setData(Map.of("conditionsOfJoining", "bad JSON"));
 
     TraineeDetailsDto traineeDetails = mapper.toProgrammeMembershipDto(recrd);
 
@@ -81,7 +84,7 @@ class TraineeDetailsMapperTest {
   @Test
   void shouldMapConditionsOfJoiningToEmptyMapWhenMissing() {
     Record recrd = new Record();
-    recrd.setData(Collections.singletonMap("conditionsOfJoining", null));
+    recrd.setData(Map.of());
 
     TraineeDetailsDto traineeDetails = mapper.toProgrammeMembershipDto(recrd);
 
@@ -92,7 +95,7 @@ class TraineeDetailsMapperTest {
   @Test
   void shouldMapOtherSitesToEmptySetWhenBadJson() {
     Record recrd = new Record();
-    recrd.setData(Collections.singletonMap("otherSites", "bad JSON"));
+    recrd.setData(Map.of("otherSites", "bad JSON"));
 
     TraineeDetailsDto traineeDetails = mapper.toPlacementDto(recrd);
 
@@ -102,10 +105,31 @@ class TraineeDetailsMapperTest {
   @Test
   void shouldMapOtherSitesToEmptySetWhenMissing() {
     Record recrd = new Record();
-    recrd.setData(Collections.singletonMap("otherSites", null));
+    recrd.setData(Map.of());
 
     TraineeDetailsDto traineeDetails = mapper.toPlacementDto(recrd);
 
     assertThat("Unexpected curricula size.", traineeDetails.getOtherSites().size(), is(0));
+  }
+
+  @Test
+  void shouldMapWholeTimeEquivalentToNullWhenMissing() {
+    Record recrd = new Record();
+    recrd.setData(Map.of());
+
+    TraineeDetailsDto traineeDetails = mapper.toPlacementDto(recrd);
+
+    assertThat("Unexpected WTE.", traineeDetails.getWholeTimeEquivalent(), nullValue());
+  }
+
+  @ParameterizedTest
+  @ValueSource(strings = {"wholeTimeEquivalent", "placementWholeTimeEquivalent"})
+  void shouldMapWholeTimeEquivalentForDifferentFieldNames(String fieldName) {
+    Record recrd = new Record();
+    recrd.setData(Map.of(fieldName, "0.5"));
+
+    TraineeDetailsDto traineeDetails = mapper.toPlacementDto(recrd);
+
+    assertThat("Unexpected WTE.", traineeDetails.getWholeTimeEquivalent(), is("0.5"));
   }
 }
